--- a/app/src/main/res/layout/fragment_mondstadt.xml
+++ b/app/src/main/res/layout/fragment_mondstadt.xml
@@ -87,6 +87,17 @@
         app:layout_constraintTop_toBottomOf="@+id/eula" />
 
     <Button
+        android:id="@+id/albedo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="20dp"
+        android:text="Albedo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mona" />
+
+    <Button
         android:id="@+id/previous2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
