--- a/app/src/main/res/layout/fragment_mondstadt.xml
+++ b/app/src/main/res/layout/fragment_mondstadt.xml
@@ -107,10 +107,10 @@
         app:layout_constraintTop_toBottomOf="@+id/albedo" />
 
     <Button
-        android:id="@+id/previous2"
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Previous"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
