--- a/app/src/main/res/layout/fragment_diona.xml
+++ b/app/src/main/res/layout/fragment_diona.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="333dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/character_diona_portrait"/>
 
             <TextView
